# black-box

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PHASE1_COMPLETE.md  QUICKSTART.md  README.md  SPEC.md  SUMMARY.md  pyproject.toml
config/: default.yaml
docs/: STATUS.md
docs/architecture/: AGENTS.md  MEMORY.md  OVERVIEW.md
docs/guides/: CHALLENGES.md  CONFIGURATION.md  DEVELOPMENT.md
frontend/: app.py
scripts/: setup.sh  start.sh
src/blackbox/: __init__.py
src/blackbox/agents/: __init__.py  aura.py  command.py  flash.py  parser.py  probe.py  sensor.py  shield.py  sieve.py  vault.py  verdict.py
src/blackbox/core/: __init__.py  agent.py  config.py  logging.py  orchestrator.py  state.py
src/blackbox/models/: __init__.py  client.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_swarm_flow.py
tests/unit/: test_client.py  test_config.py
tests/unit/test_agents/: test_aura.py  test_command.py  test_flash.py  test_parser.py  test_probe.py  test_sensor.py  test_shield.py  test_sieve.py  test_vault.py  test_verdict.py
